ensure Java 14 preview features are usable